# subscription-feed-summarizer

./: .gitignore  AGENTS.md  Internet Subscriptions Summariser.json  feeds.csv  llm.py  main.py  pyproject.toml
