[project]
name = "subscription-feed-summarizer"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "feedparser>=6.0",
    "google-genai>=2.10.0",
    "instructor[google-genai]>=1.15.4",
    "pandas>=2.0",
    "python-dotenv>=1.2.2",
    "toons>=0.7.0",
]
